# tinymlops-poc

./: .gitignore  CLAUDE.md  LICENSE  README.md  create_initial_knn_state.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-rpi.txt  requirements-tinylcm.txt  requirements-tinysphere.txt  setup.py
.claude/: settings.local 2.json
.devcontainer/: Dockerfile  devcontainer.json
docker/: Dockerfile.frontend  Dockerfile.tinysphere  nginx.conf
docs/: adaptation_sequence_diagram.md  adaptation_sequence_diagram.puml  adaptation_sequence_simplified.md  adaptation_sequence_simplified.puml  adaptive_workflow.md  adaptive_workflow_detailed.md  advanced_architecture_tactics_analysis.md  architectural_overview.md  complete_workflow_analysis.md  complete_workflow_sequence.md  complete_workflow_sequence.puml  confidence_calculation_analysis.md  device_connectivity_architecture.md  geolocation.md  initial_state_creation_analysis.md  knn_distance_monitor_class_diagram.md  knn_distance_monitor_class_diagram.puml  knn_drift_detection.md  knn_drift_detection_explained.md  model_training_analysis.md  quality_attributes_analysis.md  simplified_confidence_analysis.md  system_context_documentation.md  technical_context_diagram.md  tinylcm_core_architecture.md  tinylcm_core_architecture.puml  tinylcm_scenario1_explained.md  tinylcm_tinysphere_integration.md  tinylcm_tinysphere_sequence.md  tinylcm_tinysphere_sequence.puml  todos.md
docs/arc42/: 01_introduction_and_goals.md  02_architecture_constraints.md  03_context_and_scope.md
example/: README.md  adaptive_camera.py  adaptive_monitoring_picamera2.py  camera_handler.py  config.json  create_launch_symlink.sh  device_id_manager.py  launch.sh  main.py  model_inspector.py  one_line_install.sh  pi_setup.md  pi_setup.sh  preprocessors.py  requirements.txt  run_example.py  setup.sh  setup_complete.sh  setup_simple.sh  setup_tinysphere.sh  stone_detector.py  sync_client.py  system_metrics.py  test_tinysphere_connection.py
example/models/: labels.txt
example/scenarios/: README.md  config_autonomous.json  main_autonomous.py
examples/: analyze_performance.py  launch_fix_patch.txt  one_line_install.sh  requirements.txt  run_performance_tests.sh  scenarios_analysis.md
examples/assets/initial_states/: create_inital_knn_sc2.py  (+6 more)
examples/exp_analysis/: compare_scenarios.py  compare_scenarios_enhanced.py  quick_compare.py  requirements.txt  run_enhanced_analysis.sh  sc_bakup.py  script.py  separate_metrics.py  test_enhanced.py
examples/model_training/: train_tflite_classification_model.py  train_tflite_object_model.py  train_tflite_object_model2.py
examples/scenario0_baseline_tflite/: README.md  config_scenario0.json  main_scenario0.py  run_scenario0.sh
examples/scenario1_monitoring_only/: README.md  config_scenario1.json  main_scenario1.py
examples/scenario1_tinylcm_inferencepipeline/: README.md  config_scenario1.json  main_scenario1.py
examples/scenario1_tinylcm_no_drift/: README.md  config_scenario1.json  main_scenario1.py  run_scenario1.sh
examples/scenario2_1_drift_performance/: main_scenario2_1.py
examples/scenario2_drift_objects/: README.md  config_scenario2.json  config_scenario2_performance.json  feature_processor.py  main_scenario2.py
examples/scenario2_drift_pink_yellow/: config_scenario2.json  main_scenario2.py
examples/scenario3_drift_objects2/: config_scenario3.json  main_scenario3.py
examples/utils/: camera_handler.py  geolocation.py  preprocessors.py  sync_client.py  test_feature_extraction.py
tests/tinylcm/: conftest.py
thesis_docs/: chapter5_tinymlops_ecosystem.md  chp05_framework.tex
tinylcm/: README.md  __init__.py  constants.py  pyproject.toml  setup.py
tinylcm/client/: __init__.py  connection_manager.py  sync_client.py  sync_interface.py
tinylcm/core/: __init__.py  adaptation_tracker.py  base.py  condensing.py  data_structures.py  pipeline.py  state_manager.py
tinylcm/core/classifiers/: __init__.py  base.py  knn.py
tinylcm/core/data_logger/: __init__.py  logger.py
tinylcm/core/data_logger/metadata/: __init__.py  base.py  json.py
tinylcm/core/data_logger/storage/: __init__.py  base.py  factory.py  image.py  json.py  text.py
tinylcm/core/drift_detection/: __init__.py  base.py  confidence.py  cusum.py  distribution.py  features.py
tinylcm/core/drift_detector/: __init__.py  base.py  registry.py
tinylcm/core/drift_detector/detectors/: __init__.py  composite.py  confidence.py  distribution.py  feature.py  prediction.py
tinylcm/core/feature_extractors/: __init__.py  base.py  tflite.py
tinylcm/core/feature_transformers/: __init__.py  base.py  pca.py  standard_scaler_pca.py
tinylcm/core/handlers/: __init__.py  active.py  base.py  hybrid.py  passive.py
tinylcm/core/heuristics/: __init__.py  adapter.py
tinylcm/core/inference_monitor/: __init__.py  metrics_collector.py  monitor.py
tinylcm/core/inference_monitor/anomaly_detectors/: __init__.py  base.py  composite.py  registry.py  statistical.py  threshold.py
tinylcm/core/model_manager/: __init__.py  formats.py  manager.py  metadata.py  storage.py
tinylcm/core/operational_monitor/: __init__.py  metrics_collector.py  monitor.py
tinylcm/core/quarantine/: __init__.py  buffer.py
tinylcm/core/training_tracker/: __init__.py  tracker.py
tinylcm/interfaces/: __init__.py  monitoring.py  registry.py  storage.py
tinylcm/utils/: __init__.py  config.py  errors.py  file_utils.py  geolocation.py  logging.py  metrics.py  versioning.py
tinysphere/: alembic.ini  requirements.txt
tinysphere/api/: main.py
tinysphere/db/: add_geolocation_columns.sh  add_geolocation_columns.sql  add_platform_columns.sh  add_platform_columns.sql  models.py
tinysphere/docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf  start-api.sh  tinylcm-requirements.txt
tinysphere/frontend/: package-lock.json  package.json
tinysphere/importer/: __init__.py  drift_processor.py  package_processor.py
tinysphere/scripts/: check_enum_values.py
(+183 files in other folders)
