[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinymlops-poc"
version = "0.1.0"
description = "Proof of Concept for TinyMLOps - ML Lifecycle Management for Edge Devices"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.5; python_version<'3.12'",
    "numpy>=1.26.0; python_version>='3.12'",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
tinysphere = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.6",
    "pydantic>=2.0.0",
    "alembic>=1.11.1",
    "python-dotenv>=1.0.0",
    "mlflow>=2.5.0",
    "boto3>=1.28.3",
    "python-multipart>=0.0.6",
]
rpi = [
    "picamera2>=0.3.9",
    "RPi.GPIO>=0.7.0",
    "gpiozero>=1.6.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88