[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinylcm"
version = "0.2.0"
description = "Autonomous and adaptive lifecycle management for TinyML on edge devices"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.5; python_version<'3.12'",
    "numpy>=1.26.0; python_version>='3.12'",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
# Developer tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

# Adaptation-specific components
adaptation = [
    "scikit-learn>=1.0.0",
    "scipy>=1.9.0",
    "pydantic>=2.0.0",
]

# TensorFlow Lite dependencies
tflite = [
    "tflite-runtime>=2.10.0; platform_machine!='x86_64'",
    "tensorflow>=2.10.0,<2.16.0; platform_machine=='x86_64'",
    "pillow>=9.0.0",
]

# OpenCV dependencies for image processing
opencv = [
    "opencv-python-headless>=4.5.0",
]

# Full installation with all features
all = [
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "pillow>=9.0.0",
    "opencv-python-headless>=4.5.0",
    "tflite-runtime>=2.10.0; platform_machine!='x86_64'",
    "tensorflow>=2.10.0,<2.16.0; platform_machine=='x86_64'",
    "scikit-learn>=1.0.0",
    "scipy>=1.9.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "pywifi>=1.1.12; platform_system=='Windows' or platform_system=='Linux'",
    "netifaces>=0.11.0",
    "wifi>=0.8.0; platform_system=='Linux'",
]

# Edge-optimized installation with minimal dependencies
edge = [
    "numpy>=1.26.0",  # Since minimum Python is 3.10
    "tflite-runtime>=2.10.0",
    "pillow>=9.0.0",
    "requests>=2.28.0",
]

# Geolocation dependencies
geolocation = [
    "requests>=2.28.0",
    "pywifi>=1.1.12; platform_system=='Windows' or platform_system=='Linux'",
    "netifaces>=0.11.0",
    "wifi>=0.8.0; platform_system=='Linux'"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

